--- a/nba_app/src/app/nda.dashboard/nda.dashboard.html
+++ b/nba_app/src/app/nda.dashboard/nda.dashboard.html
@@ -1,18 +1,23 @@
-<div class="flex h-screen bg-gray-900">
+<div class="flex h-screen bg-gray-900 text-amber-50">
     <div class="w-full bg-gray-800 rounded-lg m-3">
         <div class="flex flex-col h-full">
             <div class="flex-1 min-h-0 m-3 rounded-lg">
                 <div class="flex h-full">
-                    <div class="flex-1 bg-amber-50 rounded-lg mr-3">
-
+                    <div class="flex-1 bg-gray-900 rounded-lg mr-3">
+                        <div class="flex content-center justify-center h-70 bg-gray-800 rounded-lg m-3">
+                            <img [src]="getPlayerImage()" class="pt-3" alt="player image">
+                        </div>
+                        <div class="bg-gray-800 rounded-lg mx-3 p-3">
+                            <p class="text-3xl ">La Clippers</p>
+                        </div>
                     </div>
-                    <div class="flex-2 bg-amber-300 rounded-lg">
+                    <div class="flex-2 bg-gray-900 rounded-lg">
 
                     </div>
                 </div>
             </div>
             <div class="flex-1 min-h-0 mx-3 mb-3">
-                <div class="h-full bg-amber-700 rounded-lg">
+                <div class="h-full bg-gray-900 rounded-lg">
 
                 </div>
             </div>
